@@ -1,3 +1,6 @@
+May 03, 2023
+  implemented FileSystemLock in TermStatsLoader: only one instance of TermStatsLoader could be running in a JVM
+
 Apr 25, 2023
   updated CL source to CL release v2023-04-20
 
